src/homelab-map/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homelab-map
  labels:
    name: homelab-map
